[Gtk] [Cairo] Memory leak when is WebView destroy. https://bugs.webkit.org/show_bug.cgi?id=107112

Patch by Oleg Smirnov <oleg.smirnov@lge.com> on 2013-01-21
Reviewed by Martin Robinson.

Make createSurfaceForBackingStore return a smart pointer in all supported
build configurations to avoid a memory leak.

No new tests. There is memory leak only.

* platform/cairo/WidgetBackingStoreCairo.cpp:
(WebCore::createSurfaceForBackingStore):

Canonical link: https://commits.webkit.org/125678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140325 268f45cc-cd09-0410-ab3c-d52691b4dbfc